--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <div class="navbar navbar-expand-lg">
+        <div class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <h1>Sneakers house</h1>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
@@ -24,13 +24,13 @@
                             <a class="nav-link active" href="#">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Produtos</a>
+                            <a class="nav-link" href="#">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Promoções</a>
+                            <a class="nav-link" href="#">Promoções</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Contato</a>
+                            <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
                 </nav>
@@ -38,96 +38,87 @@
         </div>
     </header>
 
-    <div class="container container-grid"> 
-        <h2>O lugar onde você encontra seu estílo</h2>
+    <div class="container container-grid">
+        <h2>O lugar onde você encontra seu estilo</h2>
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card text-bg-dark">
-                    <img src="https://cdn.pixabay.com/photo/2020/04/09/09/30/nike-5020612_1280.jpg" height="350px" />
+                    <img src="https://cdn.pixabay.com/photo/2020/04/09/09/30/nike-5020612_1280.jpg" height="350px" class="card-img-top" />
                     <div class="card-img-overlay">
                         <h4 class="card-title">Sobre a loja</h4>
                         <p class="card-text">
                             Somos apaixonados por sneakers e contamos com as melhores marcas e parceiros,
-                            visando trazer exclusividade para os sneakerheads, Somos os principais parceiros
+                            visando trazer exclusividade para os sneakerheads. Somos os principais parceiros
                             estratégicos dos players globais: Nike, Jordan Brand, adidas, Vans, Puma. Com isso,
                             além da enorme responsabilidade em elevar e democratizar a cultura sneaker no Brasil,
                             trazemos sempre em primeira mão todos os lançamentos globais, produtos exclusivos,
-                            com a mais alta tecnologia e qualidade.</p>
+                            com a mais alta tecnologia e qualidade.
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <img src="./lib/banner-who-we-are___b939e680be35909947097783000bda39.jpg" width="700px" height="300px"
-                    alt="">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <img src="https://cdn.pixabay.com/photo/2023/05/03/22/43/tennis-7968714_1280.png" class="img-fluid" alt="Banner">
             </div>
 
-            <div class="col">
-                <h5>Adidas Originais</h5>
-                <img src="https://cdn.pixabay.com/photo/2020/07/19/05/34/adidas-5418998_960_720.jpg" width="300px"
-                    height="300px" alt="">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <h5>Confira nossos produtos</h5>
+                <img src="https://cdn.pixabay.com/photo/2017/08/06/14/54/lights-2593231_960_720.jpg" class="img-fluid" alt="Extra Item">
+                <button class="btn btn-primary" type="button">Clique aqui para receber novidades</button>
             </div>
-            <div class="col">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <h5>Nike Air</h5>
-                <img src="https://cdn.pixabay.com/photo/2019/01/26/22/48/nike-3957127_1280.jpg" width="380px"
-                    height="300px" alt="">
+                <img src="https://cdn.pixabay.com/photo/2019/01/26/22/48/nike-3957127_1280.jpg" class="img-fluid" alt="Nike Air">
             </div>
-            <div class="col">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <h5>Air Jordan</h5>
-                <img src="https://cdn.pixabay.com/photo/2020/07/19/05/31/nike-5418992_960_720.jpg" width="380px"
-                    height="300px" alt="">
+                <img src="https://cdn.pixabay.com/photo/2020/07/19/05/31/nike-5418992_960_720.jpg" class="img-fluid" alt="Air Jordan">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <h5>Adidas Originais</h5>
+                <img src="https://cdn.pixabay.com/photo/2020/07/19/05/34/adidas-5418998_960_720.jpg" class="img-fluid" alt="Adidas Originais">
             </div>
         </div>
     </div>
-
 
     <div class="container">
         <div id="carousel-ctrl" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div data-bs-interval="3000" class="carousel-item active">
-                    <img src="https://cdn.pixabay.com/photo/2016/11/21/15/54/countryside-1846093_1280.jpg"
-                        width="1000px" height="500px">
-                        <div class="carousel-caption">
-                            <h2>Running</h2>
-                        </div>
+                <div class="carousel-item active" data-bs-interval="3000">
+                    <img src="https://cdn.pixabay.com/photo/2016/11/21/15/54/countryside-1846093_1280.jpg" class="d-block w-100" alt="Running">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Running</h2>
+                    </div>
                 </div>
-                <div data-bs-interval="3000" carousel slide class="carousel-item">
-                    <img src="https://cdn.pixabay.com/photo/2015/10/29/01/24/shoes-1011596_1280.jpg" width="1000px"
-                        height="500px">
-                        <div class="carousel-caption">
-                            <h2>Basquete</h2>
-                        </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="https://cdn.pixabay.com/photo/2015/10/29/01/24/shoes-1011596_1280.jpg" class="d-block w-100" alt="Basquete">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Basquete</h2>
+                    </div>
                 </div>
-                <div data-bs-interval="3000" carousel slide class="carousel-item">
-                    <img src="https://cdn.pixabay.com/photo/2020/05/03/19/09/nike-5126389_1280.jpg" width="1000px"
-                        height="500px">
-                        <div class="carousel-caption">
-                            <h2>Casual</h2>
-                        </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="https://cdn.pixabay.com/photo/2020/05/03/19/09/nike-5126389_1280.jpg" class="d-block w-100" alt="Casual">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Casual</h2>
+                    </div>
                 </div>
             </div>
 
-            <button data-bs-target="#carousel-ctrl" data-bs-slide="prev" class="carousel-control-prev" type="button">
-                <span class="carousel-control-prev-icon"></span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel-ctrl" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-
-            <button data-bs-target="#carousel-ctrl" data-bs-slide="next" class="carousel-control-next" type="button">
-                <span class="carousel-control-next-icon"></span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel-ctrl" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carousel-ctrl" class="active" data-bs-slide-to="0">
-                <button type="button" data-bs-target="#carousel-ctrl" data-bs-slide-to="1">
-                <button type="button" data-bs-target="#carousel-ctrl" data-bs-slide-to="2">
-                    </button>
+                <button type="button" data-bs-target="#carousel-ctrl" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carousel-ctrl" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carousel-ctrl" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-
         </div>
-
     </div>
-
-
-
-
 
     <script src="./lib/bootstrap.bundle.min.js"></script>
 </body>
